# Pocket-Heist

./: .gitignore  CLAUDE.md  CLOUD-DEPLOYMENT.md  README.md  package-lock.json  pyproject.toml  render.yaml
.kiro/specs/pocket-heist/: .config.kiro  design.md  requirements.md  tasks.md
backend/: __init__.py  auth.py  database.py  dependencies.py  enums.py  heist_service.py  main.py  models.py  requirements.txt  schemas.py  user_service.py
backend/routers/: auth.py  heists.py
frontend/: api_client.py
frontend-react/: .env.example  .gitignore  E2E_TEST_CHECKLIST.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  package-lock.json  package.json  tailwind.config.js  test-api.sh
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/: HeistCard.jsx  HeistCardSkeleton.jsx  HeistDetailsModal.jsx  HeistGrid.jsx  ProtectedRoute.jsx  Toast.jsx
frontend-react/src/contexts/: AuthContext.jsx  ToastContext.jsx
frontend-react/src/layouts/: DashboardLayout.jsx
frontend-react/src/pages/: BlueprintStudio.jsx  IntelArchive.jsx  LandingPage.jsx  MyAssignments.jsx  WarRoom.jsx
frontend-react/src/services/: api.js  auth.js  heists.js
frontend-streamlit/: app.py
screenshots/: README.md
tests/: __init__.py
tests/integration/: test_auth_api.py  test_auth_api_simple.py  test_heist_api.py  test_protected_routes.py
tests/smoke/: test_api_setup.py
tests/unit/: test_auth.py  test_heist_service.py  test_validators.py
ui-mockup/react/: App.jsx
ui-mockup/streamlit/: app.py
