[project]
name = "pocket-heist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "hypothesis>=6.151.12",
    "pandas>=3.0.2",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.44.0",
]
